<resources>
  <string name="app_name">OwOUploader</string>
  <string name="logo_name">OwO</string>
  <string name="logo_branding">A private, Pomf-compatible file host.</string>
  <string name="login_hint_token">Authentication Token</string>
  <string name="login_button_continue">Enter</string>
  <string name="shorten_loading">Loading…</string>
  <string name="shorten_url_placeholder">URL</string>
  <string name="history_item_content_description">File preview</string>
  <string name="history_item_title_placeholder">Title</string>
  <string name="history_item_description_placeholder">Description</string>
  <string name="history_item_copy_content_description">Copy link</string>
  <string name="progress_item_cancel_content_description">Cancel button</string>
  <string name="progress_item_progress_placeholder">-1 / 0 MB</string>
  <string name="telemetry_info_balloon">Crash reports are anonymous, i.e contain no personal information. Your token is never included in these crash reports.\n\nCrash reports contain essential information that we use to fix bugs and errors. Without opting in we may not be able to help you with crashes you encounter.</string>
  <string name="understood">Understood</string>
  <string name="show_more_info">Show more info</string>
  <string name="crash_report_checkbox">Send anonymous crash reports</string>
  <string name="history_item_associated_description">associated item</string>
  <string name="history_menu_copy">Copy</string>
  <string name="history_menu_share">Share</string>
  <string name="history_menu_delete">Delete</string>
  <string name="dialog_delete_title">Delete item</string>
  <string name="dialog_delete_description">This action removes the item from your local history. This action is irreversible.</string>
  <string name="dialog_delete_associated_title">Delete item</string>
  <string name="dialog_delete_associated_description">This action removes the item from both your local and associated history. This action is irreversible.</string>
  <string name="toast_copied">Copied to clipboard</string>
  <string name="toast_removed">Item removed</string>
  <string name="unchanged">(unchanged)</string>
  <string name="settings">Settings</string>
  <string name="about">About</string>
  <string name="about_app">OwO Android v%version%\nhttps://github.com/bramhaag/owouploader</string>
  <string name="report">Report an issue</string>
  <string name="ok">Ok</string>
  <string name="search">Search</string>
  <string name="filter">Filter</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>