<?xml version="1.0" encoding="utf-8"?><!--
  ~ OwO Uploader
  ~ Copyright (C) 2021
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item
    android:id="@+id/action_item_copy"
    android:icon="@drawable/outline_content_copy_24"
    android:title="@string/history_menu_copy" />
  <item
    android:id="@+id/action_item_share"
    android:icon="@drawable/outline_share_24"
    android:title="@string/history_menu_share" />
  <item
    android:id="@+id/action_item_delete"
    android:icon="@drawable/outline_delete_24"
    android:title="@string/history_menu_delete" />
</menu>