<?xml version="1.0" encoding="utf-8"?><!--
  ~ OwO Uploader
  ~ Copyright (C) 2021
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_marginBottom="5dp"
  android:layout_marginHorizontal="5dp">
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
      android:id="@+id/upload_item_copy"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:background="@null"
      android:contentDescription="@string/history_item_copy_content_description"
      android:src="@drawable/outline_more_vert_24"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
      android:id="@+id/upload_item_image"
      android:layout_width="64dp"
      android:layout_height="64dp"
      android:layout_margin="5dp"
      android:contentDescription="@string/history_item_content_description"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/upload_item_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:layout_marginStart="5dp"
      android:drawablePadding="5dp"
      android:ellipsize="end"
      android:maxLines="1"
      android:text="@string/history_item_title_placeholder"
      app:drawableStartCompat="@drawable/outline_cloud_18"
      app:layout_constraintStart_toEndOf="@id/upload_item_image"
      app:layout_constraintTop_toTopOf="parent" />
    <TextView
      android:id="@+id/upload_item_description"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="5dp"
      android:layout_marginBottom="20dp"
      android:ellipsize="end"
      android:maxLines="1"
      android:text="@string/history_item_description_placeholder"
      android:textSize="12sp"
      app:layout_constraintStart_toEndOf="@id/upload_item_image"
      app:layout_constraintTop_toBottomOf="@id/upload_item_title"
      app:layout_constraintBottom_toBottomOf="parent"/>
  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
