<?xml version="1.0" encoding="utf-8"?>
  <!--
  ~ OwO Uploader
  ~ Copyright (C) 2021
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/background_color_primary"
  tools:context=".activity.LoginActivity">

  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/login_logo_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/OwOTextView"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.15"/>

  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/login_token_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/logo_branding"
    android:textColor="@color/text_color"
    android:textAlignment="center"
    android:textSize="18sp"
    app:layout_constraintTop_toBottomOf="@id/login_logo_text"/>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/login_text_input"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp"
    android:hint="@string/login_hint_token"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    >
    <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      />
  </com.google.android.material.textfield.TextInputLayout>

  <!--
  This will double as our "skip" button
  because idk how to make text only buttons with other components
  -->
  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/login_skip_setup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="30dp"
    android:text="@string/login_button_continue"
    android:textColor="@color/text_color"
    android:textAlignment="center"
    android:textSize="18sp"
    android:textAllCaps="true"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>